Histogram model uses now List instead of SortedSet for the bins, bars and elements in order to allow a user defined order